eks-cluster/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: barkuni-app
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: barkuni-app
  template:
    metadata:
      labels:
        app: barkuni-app
    spec:
      serviceAccountName: pod-viewer
      containers:
        - name: barkuni-app
          image: 058264138725.dkr.ecr.us-east-1.amazonaws.com/barkuni_corp:latest
          ports:
            - containerPort: 5000
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
